[package]
name = "ruc-fp-evm"
version = "3.0.0"
license = "Apache-2.0"
edition = "2021"
description = "..."
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
evm = { version = "0.37.0", default-features = false, features = ["std", "with-serde"] }
