[package]
name = "ruc-evm-test-vector-support"
version = "1.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
sp-core = "18.0.0"
evm = { version = "0.37.0", features = ["with-codec"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fp-evm = { package = "ruc-fp-evm", path = "../../../primitives/evm" }
