[package]
name = "ruc-evm-precompile-curve25519"
version = "1.0.1"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, features = ["u64_backend", "alloc"] }
fp-evm = { package = "ruc-fp-evm", path = "../../../../primitives/evm" }
