[package]
name = "ruc-evm-precompile-ed25519"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["alloc", "u64_backend"] }
fp-evm = { package = "ruc-fp-evm", path = "../../../../primitives/evm" }
