[package]
name = "ruc-evm-precompile-modexp"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
num = { version = "0.4", features = ["alloc"], default-features = false }
fp-evm = { package = "ruc-fp-evm", path = "../../../../primitives/evm" }

[dev-dependencies]
hex = "0.4.3"
ruc-evm-test-vector-support = { version = "1.0.0", path = "../../test-vector-support" }
