[package]
name = "ruc-evm-precompile-sha3fips"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
tiny-keccak = { version = "2.0", features = ["fips202"] }
fp-evm = { package = "ruc-fp-evm", path = "../../../../primitives/evm" }
