[package]
name = "ruc-evm-precompile-simple"
version = "2.0.0"
edition = "2021"
description = "..."
license = "Apache-2.0"
homepage = "https://github.com/rust-util-collections/frontier"
repository = "https://github.com/rust-util-collections/frontier"

[dependencies]
ripemd = { version = "0.1", default-features = false }
sp-io = "8.0.0"
fp-evm = { package = "ruc-fp-evm", path = "../../../../primitives/evm" }

[dev-dependencies]
ruc-evm-test-vector-support = { version = "1.0.0", path = "../../test-vector-support" }
